--- a/platforms/android/app/src/main/assets/www/admin.html
+++ b/platforms/android/app/src/main/assets/www/admin.html
@@ -8,6 +8,7 @@
         <link type="text/css" rel="stylesheet" href="css/all.min.css">
         <link type="text/css" rel="stylesheet" href="navigation.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link type="text/css" rel="stylesheet" href="css/collapsible.html">
         <!--plugins-->
         <plugin name="com.attendee.barcodegenerator" spec="~1" />
         <!-- JS -->
@@ -15,8 +16,8 @@
         <script type="text/javascript" src="scripts/jquery.min.js"></script>
         <script src="https://infomation-93c5.restdb.io/rest/_jsapi.js"></script>
         <script type="text/javascript" src="navigation.js"></script>
+        <script type="text/javascript" src="scripts/qrcode.js"></script>
         <script type="text/javascript" src="scripts/admin.js"></script>
-
         <style>
             html, body {
                 width: 100%;
@@ -49,13 +50,15 @@
                 <a onclick="adminCheck()">Admin</a>
             </div>
         </div>
+
         <p style="text-align: center; margin-top: 15%; font-size: 2em"><b>Giv point til et hold</b></p>
         <div class="center-all">
             <i onclick="givePoint()" class="fa fa-plus" style="font-size: 3em"></i>
         </div>
         <hr>
-        <h1 id="løbName"></h1>
-        <h3 id="postName"></h3>
-        <p id="postBes"></p>
+        <h1 class="collapsible" id="løbName">Loader</h1>
+        <h3 id="postName">Loader</h3>
+        <p id="postBes">Loader</p>
     </body>
+
 </html>
